--- a/force-app/main/default/classes/ProductsListController.cls
+++ b/force-app/main/default/classes/ProductsListController.cls
@@ -1,6 +1,13 @@
 public class ProductsListController {
     @AuraEnabled
-    public static List<Account> getRecords(Integer offSetCount) {
-        return [SELECT Id, Name, AccountNumber, Phone, CreatedDate FROM Account LIMIT 2 OFFSET :offSetCount];
+    public static List<Quote> getAccountRecord(Id quoteId) {
+        return [SELECT Id, Name, Account.Id, Account.Price_Book__c, Account.CurrencyIsoCode FROM Quote WHERE Id =: quoteId];
+    }
+    @AuraEnabled
+    public static List<PriceBookEntry> getRecords(Integer offSetCount, String accountPB, String accountCurrency) {
+        return [SELECT Id, Name, Product_List_Price__c, UnitPrice, ProductCode, Product_SAP_Id__c
+                FROM PriceBookEntry 
+                WHERE CurrencyIsoCode =: accountCurrency AND PriceBookName__c =: accountPB
+                LIMIT 20 OFFSET :offSetCount];
     }
 }
