--- a/force-app/main/default/classes/ProductsListController.cls
+++ b/force-app/main/default/classes/ProductsListController.cls
@@ -5,7 +5,7 @@ public class ProductsListController {
     }
     @AuraEnabled
     public static List<PriceBookEntry> getRecords(Integer offSetCount, String accountPB, String accountCurrency) {
-        return [SELECT Id, Name, Product_List_Price__c, UnitPrice, ProductCode, Product_SAP_Id__c
+        return [SELECT Id, Name, Product2Id, Product_List_Price__c, UnitPrice, ProductCode, Product_SAP_Id__c
                 FROM PriceBookEntry 
                 WHERE CurrencyIsoCode =: accountCurrency AND PriceBookName__c =: accountPB
                 LIMIT 20 OFFSET :offSetCount];
